--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ascom-alpaca = {version ="1.0.0-beta.1",features = ["server", "camera", "filterwheel"]}
+async-trait = "0.1.74"
+custom_debug = "0.5.1"
+eyre = "0.6.8"
+libqhyccd-sys = { version = "0.1.0", path = "../libqhyccd-sys" }
+ndarray = "0.15.6"
+parking_lot = "0.12.1"
+strum = "0.25.0"
+tokio = "1.33.0"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.17"
