--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ libqhyccd-sys = { version = "0.1.0", path = "../libqhyccd-sys" }
 ndarray = "0.15.6"
 parking_lot = "0.12.1"
 strum = "0.25.0"
-tokio = "1.33.0"
+tokio = {version="1.33.0", features = ["rt-multi-thread", "macros"]}
 tracing = "0.1.40"
 tracing-subscriber = "0.3.17"
