looks like it's working

--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -22,6 +22,12 @@ jobs:
           submodules: true
       - name: Install libusb
         run: sudo apt-get install libusb-1.0-0-dev
+      - name: Install qhyccd sdk
+        run: |
+          wget https://www.qhyccd.com/file/repository/publish/SDK/230906/sdk_linux64_23.09.06.tgz
+          tar xzvf sdk_linux64_23.09.06.tgz
+          cd sdk_linux64_23.09.06/
+          sudo sh install.sh
       - name: Install nightly
         uses: dtolnay/rust-toolchain@nightly
       - name: cargo generate-lockfile
