--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,5 +35,8 @@ tracing-subscriber = "0.3.17"
 cfg-if = "1.0.0"
 educe = "0.4.23"
 
+# to make ascom-alpaca happy
+mediatype = "0.19.16"
+
 [dev-dependencies]
 mockall = { version = "0.11.4", features = [] }
