--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -79,7 +79,7 @@ jobs:
     # https://docs.github.com/en/actions/learn-github-actions/contexts#context-availability
     strategy:
       matrix:
-        msrv: ["1.67.0"] # time-macros requires 1.67
+        msrv: ["1.7.0"] # std::SocketAddr::new()
     name: ubuntu / ${{ matrix.msrv }}
     steps:
       - uses: actions/checkout@v4
