--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ ndarray = "0.15.6"
 parking_lot = "0.12.1"
 strum = "0.25.0"
 tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
-tracing = "0.1.40"
+tracing = { version = "0.1.40", features = ["attributes"] }
 tracing-subscriber = "0.3.18"
 cfg-if = "1.0.0"
 educe = "0.5.9"
