--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,7 +11,7 @@ concurrency:
 name: check
 jobs:
   fmt:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, self-hosted]
     name: stable / fmt
     steps:
       - uses: actions/checkout@v4
@@ -47,7 +47,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
   doc:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, self-hosted]
     name: nightly / doc
     steps:
       - uses: actions/checkout@v4
@@ -60,7 +60,7 @@ jobs:
         env:
           RUSTDOCFLAGS: --cfg docsrs
   hack:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, self-hosted]
     name: ubuntu / stable / features
     steps:
       - uses: actions/checkout@v4
@@ -74,7 +74,7 @@ jobs:
       - name: cargo hack
         run: cargo hack --feature-powerset check
   msrv:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, self-hosted]
     # we use a matrix here just because env can't be used in job names
     # https://docs.github.com/en/actions/learn-github-actions/contexts#context-availability
     strategy:
