--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -11,7 +11,7 @@ concurrency:
 name: safety
 jobs:
   sanitizers:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, self-hosted]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -55,7 +55,7 @@ jobs:
           LSAN_OPTIONS: "suppressions=lsan-suppressions.txt"
           RUSTFLAGS: "-Z sanitizer=leak"
   miri:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, self-hosted]
     steps:
       - uses: actions/checkout@v4
         with:
