--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,6 +51,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+      - name: Install build toolchain
+        run: sudo apt-get install make cmake build-essential -y
       - name: Install libusb
         run: sudo apt-get install libusb-1.0-0-dev -y
       - name: Install qhyccd sdk
