--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
   doc:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest, self-hosted]
     name: nightly / doc
     steps:
       - uses: actions/checkout@v4
@@ -79,7 +79,7 @@ jobs:
     # https://docs.github.com/en/actions/learn-github-actions/contexts#context-availability
     strategy:
       matrix:
-        msrv: ["1.70.0"] # home
+        msrv: ["1.75.0"] # home
     name: ubuntu / ${{ matrix.msrv }}
     steps:
       - uses: actions/checkout@v4
