added driver info, increased crate version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "qhyccd-alpaca"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Igor von Nyssen<igor@vonnyssen.com>"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 keywords = ["qhyccd", "astronomy", "camera", "ASCOM", "alpaca"]
-repository = "https://github.com/ivonnyssen/qhyccd-alpaca-rs"
-documentation = "https://docs.rs/qhyccd-alpaca-rs"
+repository = "https://github.com/ivonnyssen/qhyccd-alpaca"
+documentation = "https://docs.rs/qhyccd-alpaca"
 description = """
 ASCOM Alpaca driver for QHYCCD cameras and filter wheels.
 """
 categories = ["astronomy"]
-homepage = "https://github.com/ivonnyssen/qhyccd-alpaca-rs/wiki"
+homepage = "https://github.com/ivonnyssen/qhyccd-alpaca/wiki"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
