--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ cfg-if = "1.0.0"
 educe = "0.6.0"
 clap = { version = "4.5.23", features = ["derive"] }
 
+#to make minimal versions happy
+time = "0.3.35"
+
 [dev-dependencies]
 mockall = { version = "0.13.1", features = [] }
 rstest = "0.24.0"
