--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -49,7 +49,7 @@ jobs:
         name: Enable debug symbols
       - name: cargo test -Zsanitizer=address
         # only --lib --tests b/c of https://github.com/rust-lang/rust/issues/53945
-        run: cargo test --tests --all-features --target x86_64-unknown-linux-gnu
+        run: cargo test --lib --tests --all-features --target x86_64-unknown-linux-gnu
         env:
           ASAN_OPTIONS: "detect_odr_violation=0:detect_leaks=0"
           RUSTFLAGS: "-Z sanitizer=address"
@@ -70,7 +70,16 @@ jobs:
         with:
           toolchain: ${{ env.NIGHTLY }}
           components: miri
+      - name: Install libusb
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: libusb-1.0-0-dev
+          version: 1.0
+      - name: Install QHYCCD SDK
+        uses: ivonnyssen/qhyccd-sdk-install@v1
+        with:
+          version: "25.09.29"
       - name: cargo miri test
-        run: cargo miri test -- --skip no_miri
+        run: cargo miri test --all-features -- --skip no_miri
         env:
           MIRIFLAGS: ""
