--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ ascom-alpaca = { version = "1.0.0-beta.7", features = [
   "server",
   "camera",
   "filter_wheel",
+  "test",
 ] }
 async-trait = "0.1.89"
 custom_debug = "0.6.2"
@@ -40,7 +41,7 @@ parking_lot = "0.12.5"
 strum = "0.27.2"
 tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
 tracing = { version = "0.1.41", features = ["attributes"] }
-tracing-subscriber = "0.3.20"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 cfg-if = "1.0.4"
 educe = "0.6.0"
 clap = { version = "4.5.51", features = ["derive"] }
@@ -52,3 +53,5 @@ bytes = "1.7.0"
 [dev-dependencies]
 mockall = { version = "0.14.0", features = [] }
 rstest = "0.26.1"
+reqwest = "0.12.0"
+tokio = { version = "1.48.0", features = ["process"] }
