Fix minimal versions test by adding OpenSSL compatibility constraints
- Add openssl-sys >= 0.9.80 constraint for OpenSSL 3.x support
- Add openssl >= 0.10.60 constraint for compatibility
- Resolves minimal versions test failure with OpenSSL 3.5.4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ clap = { version = "4.5.51", features = ["derive"] }
 #to make minimal versions happy
 time = "0.3.44"
 bytes = "1.7.0"
+openssl-sys = "0.9.80"
+openssl = "0.10.60"
 
 [dev-dependencies]
 mockall = { version = "0.14.0", features = [] }
