--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ ascom-alpaca = { version = "1.0.0-beta.10", features = [
 async-trait = "0.1.89"
 custom_debug = "0.6.2"
 eyre = "0.6.12"
-qhyccd-rs = { git = "https://github.com/ivonnyssen/qhyccd-rs", branch = "main", features = ["simulation"] }
+qhyccd-rs = "0.1.9"
 ndarray = "0.17.1"
 parking_lot = "0.12.5"
 strum = "0.27.2"
@@ -55,5 +55,5 @@ openssl = "0.10.60"
 [dev-dependencies]
 mockall = { version = "0.14.0", features = [] }
 rstest = "0.26.1"
-reqwest = "0.12.0"
+reqwest = "0.13.1"
 tokio = { version = "1.48.0", features = ["process"] }
